# cervino

./: .gitignore  .ocamlformat  LICENSE.md  Makefile  README.md  TODO.md  cervino.opam  dune-project  dune-workspace  simple.cervino
.github/workflows/: binaries.yml
CAV2021_artifact/: Vagrantfile  init.sh  install-artifact.sh  install-system.sh
CAV2021_artifact/artifact/: 000-clean.sh  010-artifact.sh  100-electrum.sh  200-cervino.sh  300-coq.sh  400-nuxmv.sh  900-set-paths.sh
CAV2021_artifact/artifact/_root/: README
CAV2021_artifact/system/: 100-desktop.sh  200-jre.sh  300-ocaml.sh  400-coq.sh  900-save-rc-files.sh
coq/: README  _CoqProject  abstraction.v  api.v  api2coq.v  buchi.v  cervino.v  cextension.v  closure.v  coq2ml.v  dec.glob  dec.v  dec.vo  dune  elimeq.v  env.v  eqsat.v  extend.v  extension.v  extract.v  finite.v  foltl.v  foltl_diff.v  fosem.v  fragments.v  generate.v  hdex.v  instanciation.v  itps.v  makefile  makefile.conf  mlUtils.v  propagation.v  quantifiers.v  sat.v  set.glob  set.v  skolem.v  stability.v  subItp.v  (+4 more)
cram/: dune  ex1.cervino  ex1.t  ex2.cervino  ex2.t  ex20.cervino  ex20.t  ex21.cervino  ex21.t  ex22.cervino  ex22.t  ex23.cervino  ex23.t  ex24.cervino  ex24.t  ex25.cervino  ex25.t  ex26.cervino  ex26.t  ex27.cervino  ex27.t  ex28.cervino  ex28.t  ex29.cervino  ex29.t  ex3.cervino  ex3.t  ex30.cervino  ex30.t  ex4.cervino  ex4.t  ex5.cervino  ex5.t  ex6.cervino  ex6.t  ex7.cervino  ex7.t
examples/: README.md  bench.sh  cav-bench.sh  leader_send_id.cervino  notification.cervino  ticket.cervino
examples/2PSet/: 2pset.cervino
examples/CAV2021/: TLB.cervino  cav-bench.sh  fifo.cervino  gset.cervino  leader.cervino  lock.cervino  mailbox_token.cervino  philo.cervino
examples/memoire/2PC/: 2PC.cervino
examples/memoire/CRDT/: 2pset.cervino
examples/memoire/Dragon/: dragon.cervino
examples/memoire/FIFO/: fifo.cervino
examples/memoire/Lock/: lock.cervino
examples/memoire/MESI/: MESI.cervino
examples/memoire/MOESI/: MOESI.cervino
examples/memoire/TLB Shootdown/: TLB.cervino
examples/memoire/Ticket Protocol/: ticket.cervino
src/: abstraction.ml  add_between_axioms.ml  ast.ml  ast.mli  cervino_semantics.ml  cst.ml  cst.mli  cst_to_ast.ml  dune  expand_modifies.ml  extract.v  ident.ml  ident.mli  instantiation.ml  language.ml  location.ml  messages.ml  msg.ml  mysc.ml  name.ml  name.mli  parser.mly  parsing.ml  remove_equalities.ml  scanner.mll  skolemize.ml  symbol.ml  symbol.mli  test_cst_to_ast.ml  transfo.ml  transfo_TEA.ml  transfo_TFC.ml  transfo_TTC.ml  unfold_event_axiom.ml  wf.ml
src/test/: test_cervino_semantics.ml  test_cst_to_ast.ml  test_expand_modifies.ml  test_remove_equalities.ml  test_transfo_tea.ml
(+4 files in other folders)
