(library
 (name libcervino)
 (libraries containers containers-data fmt hashcons logs logs.fmt sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.make ppx_deriving.ord ppx_expect
    ppx_sexp_conv)))

(menhir
 (modules parser)
 (infer true))

(ocamllex scanner)

; (coq.extraction
;  (prelude extract)
;  (extracted_modules extract)
;  (theories coqfo))
